@@ -1,5 +1,5 @@
 DIST maven-settings-2.0.tar.bz2 16847 RMD160 74f85841adf34892b813ee082650907d06a5cd2d SHA1 4c9fb944070b94804d1dcb15b28842a473c594a0 SHA256 824762992157b154d72632f4961640d2ffb3b1facb0048398433db1f6464a98c
 DIST maven-settings-gen-src-2.0.tar.bz2 13002 RMD160 f9f9e0457547addc9529217da3773e86b5b41c8b SHA1 10381a74824118bd35edfa01cc175b33c782c21e SHA256 f8d700075d1ee18b3be04d0e803504e2393480b812999dde174c268b22834206
-EBUILD maven-settings-2.0.ebuild 592 RMD160 0f2e472fa828351fd762a833869b0aab7a856419 SHA1 03a6e2a2eb799172dbd1161cc07435f04cd1643c SHA256 4d8a9a3bbe75ae9e2adcd89b10c965e46677188b84fde583a33189615a41c566
-MISC ChangeLog 257 RMD160 ced113be6c62482f3fefc309cc35ee9448f419cf SHA1 d067543550efd47ad3b6fb5dcc2e8745f03446a1 SHA256 251adeab07a3b10024271a609d1d202d23f6439e86791bb198634a796230b70b
+EBUILD maven-settings-2.0.ebuild 683 RMD160 307de30c354380d238130def2854812577cc8762 SHA1 8c861fa82b30297e808c136d8f0a9602c0a0d5f1 SHA256 b362fb8f3c91a57f358c399f509a40485dade034f959fc3a3a61061734742488
+MISC ChangeLog 380 RMD160 2f3f93c616fc14688e9ee55be59120ebd18a890c SHA1 7ac7da507727e028e0515e026624e7831c97a61b SHA256 207b3c92f6af5092de1f3cf57c9a753bac60fd2d10d06c32976f80ba4a4ae736
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
